--- a/MongoDB/Mongoose/Shop/package.json
+++ b/MongoDB/Mongoose/Shop/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.7",
+    "express-session": "^1.18.1",
     "mongodb": "^6.14.2"
   }
 }
