--- a/MongoDB/Mongoose/Shop/package.json
+++ b/MongoDB/Mongoose/Shop/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "bcryptjs": "^3.0.2",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
     "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
-    "mongodb": "^6.14.2"
+    "mongodb": "^6.14.2",
+    "nodemailer": "^6.10.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
