--- a/MongoDB/Mongoose/Shop/package.json
+++ b/MongoDB/Mongoose/Shop/package.json
@@ -17,6 +17,7 @@
     "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.14.2",
     "nodemailer": "^6.10.0",
     "nodemailer-sendgrid-transport": "^0.2.0"
