--- a/MongoDB/Mongoose/Shop/package.json
+++ b/MongoDB/Mongoose/Shop/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mongodb": "^6.14.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
