--- a/MongoDB/Mongoose/Shop/package.json
+++ b/MongoDB/Mongoose/Shop/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.16.0",
+    "stripe": "^17.7.0"
   }
 }
