--- a/React+Next/next/my-nextjs-app/package.json
+++ b/React+Next/next/my-nextjs-app/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "my-nextjs-app",
+  "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "gray-matter": "^4.0.2",
+    "mongodb": "^3.6.4",
+    "next": "10.0.6",
+    "node": "^16.16.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
